[package]
name = "viewport"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [
  "bevy_render",
  "bevy_sprite",
  "webgl2",
  # "bevy_winit",
  # "bevy_gilrs",
  # "bevy_audio",
  # "png",
  # "hdr",
  # "vorbis",
  "x11",
] }
console_error_panic_hook = "0.1"
